# texlab

./: Cargo.toml
benches/benchmarks/: completion.rs
src/: components.rs  config.rs  lib.rs  main.rs  server.rs  workspace.rs
src/citeproc/: mod.rs
src/diagnostics/: bibtex.rs  build.rs  latex.rs  mod.rs
src/features/: build.rs  mod.rs  outline.rs  prelude.rs  testing.rs
src/features/completion/: argument.rs  begin_cmd.rs  bibtex_cmd.rs  citation.rs  color.rs  color_model.rs  component.rs  entry_type.rs  field.rs  glossary.rs  import.rs  include.rs  label.rs  mod.rs  theorem.rs  tikz_lib.rs  types.rs  user.rs  util.rs
src/features/definition/: cmd.rs  entry.rs  label.rs  mod.rs  string.rs
src/features/folding/: bibtex_decl.rs  latex_env.rs  latex_section.rs  mod.rs
src/features/highlight/: latex_label.rs  mod.rs
src/features/hover/: citation.rs  component.rs  entry_type.rs  field.rs  label.rs  mod.rs  preview.rs  string_reference.rs
src/features/link/: latex_import.rs  latex_include.rs  mod.rs
src/features/reference/: bibtex_entry.rs  bibtex_string.rs  latex_label.rs  mod.rs
src/features/rename/: cmd.rs  entry.rs  env.rs  label.rs  mod.rs
src/features/symbol/: entry.rs  mod.rs  project_order.rs  string.rs  types.rs
src/features/symbol/section/: enumeration.rs  equation.rs  float.rs  mod.rs  theorem.rs  util.rs
src/protocol/: capabilities.rs  edit.rs  mod.rs  range.rs  uri.rs
src/syntax/: lsp_kind.rs  text.rs
src/syntax/bibtex/: ast.rs  lexer.rs  mod.rs  parser.rs
src/syntax/latex/: analysis.rs  ast.rs  lexer.rs  mod.rs  parser.rs
src/tex/: miktex.rs  mod.rs  tectonic.rs  texlive.rs
tests/integration/: completion.rs  definition.rs  document_symbol.rs  folding.rs  highlight.rs  hover.rs  issues.rs  link.rs  prepare_rename.rs  reference.rs  rename.rs  workspace_symbol.rs
