[package]
name = "texlab"
description = "LaTeX Language Server"
version = "2.2.0"
license = "GPL-3.0"
readme = "README.md"
authors = [
    "Eric Förster <eric.foerster@outlook.com>", 
    "Patrick Förster <patrick.foerster@outlook.de>",
]
edition = "2018"
homepage = "https://texlab.netlify.app"

[lib]
doctest = false

[features]
default = [
    "citation",
    "server",
]
citation = [
    "bibutils-sys",
    "citeproc",
    "citeproc-db",
    "citeproc-io",
    "csl",
    "fnv",
    "html2md",
    "lalrpop/lexer",
    "lalrpop-util",
]
server = [
    "tokio-util/codec",
    "tokio-util/compat"
]

[[bin]]
name = "texlab"
required-features = ["server"]

[[test]]
name = "integration"
required-features = ["server"]

[dependencies]
async_executors = { version = "0.3", features = ["tokio_tp"] }
base64 = "0.12"
bibutils-sys = { version = "0.1", optional = true }
byteorder = "1.3"
cfg-if = "0.1"
citeproc = { git = "https://github.com/cormacrelf/citeproc-rs", rev = "68c7a7c16088b5d7751641ab37299ad064cdb221", optional = true }
citeproc-db = { git = "https://github.com/cormacrelf/citeproc-rs", rev = "68c7a7c16088b5d7751641ab37299ad064cdb221", optional = true }
citeproc-io = { git = "https://github.com/cormacrelf/citeproc-rs", rev = "68c7a7c16088b5d7751641ab37299ad064cdb221", optional = true }
csl = { git = "https://github.com/cormacrelf/citeproc-rs", rev = "68c7a7c16088b5d7751641ab37299ad064cdb221", optional = true }
fern = "0.6"
fnv = { version = "1.0", optional = true }
futures = "0.3"
fuzzy-matcher = "0.3"
html2md = { version = "0.2", optional = true }
image = "0.23"
itertools = "0.9"
lalrpop-util = { version = "0.18", optional = true }
language-server = { git = "https://github.com/latex-lsp/language-server", rev = "72404248571c7b4bb4ba58490db0e87438e8ee54" }
log = "0.4"
once_cell = "1.4"
petgraph = { version = "0.5", features = ["serde-1"] }
rayon = "1.3"
regex = "1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_repr = "0.1"
structopt = "0.3"
tempfile = "3.1"
thiserror = "1.0"
titlecase = "1.1"
tokio = { version = "0.2", features = ["fs", "io-std", "macros", "process", "rt-core", "time"] }
tokio-util = { version = "0.3", optional = true }
typed-builder = "0.6.0"
url = "2.1"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
criterion = "0.3"
indoc = "0.3"

[build-dependencies]
lalrpop = { version = "0.18", optional = true }

[profile.release]
lto = true

[[bench]]
name = "bench_main"
harness = false
